# Churn_model_prediction

./: README.md  index_sql.sql  main.py  pyproject.toml  requirements.txt
database/: churn_project.sql
docs/: churn_definition.md
src/: customer_churn_dataset2.csv
src/businesslogic/: business_logic.py
src/config/: db_config.py
src/data_engineerring/: featur.ipynb  feature_engineering.py
src/datagenerator/: data_generator.py
src/modeltrain/: model_train.py
